tests/baselines/reference/enumAssignmentCompat6.errors.txt
f.ts(28,5): error TS2322: Type 'b.DiagnosticCategory' is not assignable to type 'a.DiagnosticCategory'.
  Each declaration of 'DiagnosticCategory.Warning' differs in its value, where '0' was expected but '"Warning"' was given.
f.ts(29,5): error TS2322: Type 'a.DiagnosticCategory' is not assignable to type 'b.DiagnosticCategory'.
  Each declaration of 'DiagnosticCategory.Warning' differs in its value, where '"Warning"' was expected but '0' was given.
f.ts(33,5): error TS2322: Type 'DiagnosticCategory' is not assignable to type 'DiagnosticCategory2'.
f.ts(34,5): error TS2322: Type 'DiagnosticCategory2' is not assignable to type 'DiagnosticCategory'.
f.ts(55,9): error TS2322: Type 'DiagnosticCategory' is not assignable to type 'import("f").DiagnosticCategory'.
  Each declaration of 'DiagnosticCategory.Warning' differs in its value, where '0' was expected but '"Warning"' was given.
f.ts(56,9): error TS2322: Type 'import("f").DiagnosticCategory' is not assignable to type 'DiagnosticCategory'.
  Each declaration of 'DiagnosticCategory.Warning' differs in its value, where '"Warning"' was expected but '0' was given.


==== f.ts (6 errors) ====
    // @filename a.ts
    namespace a {
        export enum DiagnosticCategory {
            Warning,
            Error,
            Suggestion,
            Message,
        }
    
        export enum DiagnosticCategory2 {
            Warning,
            Error,
            Suggestion,
            Message,
        }
    }
    
    namespace b {
        export enum DiagnosticCategory {
            Warning = "Warning",
            Error = "Error",
            Suggestion = "Suggestion",
            Message = "Message",
        }
    }
    
    function f(x: a.DiagnosticCategory, y: b.DiagnosticCategory) {
        x = y;
        ~
!!! error TS2322: Type 'b.DiagnosticCategory' is not assignable to type 'a.DiagnosticCategory'.
!!! error TS2322:   Each declaration of 'DiagnosticCategory.Warning' differs in its value, where '0' was expected but '"Warning"' was given.
        y = x;
        ~
!!! error TS2322: Type 'a.DiagnosticCategory' is not assignable to type 'b.DiagnosticCategory'.
!!! error TS2322:   Each declaration of 'DiagnosticCategory.Warning' differs in its value, where '"Warning"' was expected but '0' was given.
    }
    
    function g(x: a.DiagnosticCategory2, y: b.DiagnosticCategory) {
        x = y;
        ~
!!! error TS2322: Type 'DiagnosticCategory' is not assignable to type 'DiagnosticCategory2'.
        y = x;
        ~
!!! error TS2322: Type 'DiagnosticCategory2' is not assignable to type 'DiagnosticCategory'.
    }
    
    
    export enum DiagnosticCategory {
        Warning,
        Error,
        Suggestion,
        Message,
    }
    
    export let x: DiagnosticCategory;
    
    (() => {
        enum DiagnosticCategory {
            Warning = "Warning",
            Error = "Error",
            Suggestion = "Suggestion",
            Message = "Message",
        }
        function f(y: DiagnosticCategory) {
            x = y;
            ~
!!! error TS2322: Type 'DiagnosticCategory' is not assignable to type 'import("f").DiagnosticCategory'.
!!! error TS2322:   Each declaration of 'DiagnosticCategory.Warning' differs in its value, where '0' was expected but '"Warning"' was given.
            y = x;
            ~
!!! error TS2322: Type 'import("f").DiagnosticCategory' is not assignable to type 'DiagnosticCategory'.
!!! error TS2322:   Each declaration of 'DiagnosticCategory.Warning' differs in its value, where '"Warning"' was expected but '0' was given.
        }
    })()